--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -403,27 +403,16 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <string name="makaba_prefs_mobile_api">Мобильный API</string>
     <string name="makaba_prefs_captcha_category">Капча</string>
     <string name="makaba_prefs_domain_category">Настройки домена</string>
-    <string name="makaba_prefs_domain">Домен</string>
-    <string name="makaba_prefs_domain_summary">Резервные адреса: 2ch.hk, 2ch.pm, 2ch.re, 2ch.tf, 2ch.wf, 2ch.yt, 2-ch.so</string>
     <string name="makaba_prefs_skip_captcha">Пропустить капчу</string>
     
     <string name="mikuba_password_ignored">(игнорируется)</string>
     
-    <string name="dobrochan_prefs_domain">Домен</string>
-    <string name="dobrochan_prefs_domain_summary">Резервные адреса: dobrochan.com, dobrochan.org, dobrochan.ru</string>
     <string name="dobrochan_prefs_max_rating">Максимальный рейтинг</string>
     <string name="dobrochan_prefs_show_captcha">Всегда показывать капчу</string>
     <string name="dobrochan_prefs_show_captcha_summary">Показывать капчу, когда её вводить не требуется</string>
     
-    <string name="dvach_prefs_domain">Домен</string>
-    <string name="dvach_prefs_domain_summary">Резервные адреса: 2-chru.net, mirror.2-chru.net, bypass.2-chru.net</string>
-    
-    <string name="ponyach_prefs_domain">Домен</string>
     <string name="ponyach_prefs_passcode">Пасскод</string>
     <string name="ponyach_prefs_captcha">Капча</string>
-    
-    <string name="synch_prefs_domain">Домен</string>
-    <string name="synch_prefs_domain_summary">Резервные адреса: syn-ch.com, syn-ch.org, syn-ch.ru, syn-ch.com.ua</string>
     
     <string name="infinity_tor_message">Чтобы постить на 8chan через Tor, вы должны использовать .onion домен.</string>
     
@@ -461,6 +450,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <string name="pref_use_https_summary">Защищённое шифрованное соединение</string>
     <string name="pref_cf_recaptcha_fallback">Cloudflare Recaptcha fallback</string>
     <string name="pref_cf_recaptcha_fallback_summary">Использовать капчу Cloudflare в режиме совместимости</string>
+    <string name="pref_domain">Домен</string>
+    <string name="pref_domain_summary">Резервные адреса: %s</string>
     <string name="pref_only_new_posts">Только новые посты</string>
     <string name="pref_only_new_posts_summary">Загружать только новые посты вместо обновления всего треда</string>
     <string name="pref_captcha_type">Тип капчи</string>
