--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -395,27 +395,16 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <string name="makaba_prefs_mobile_api">Mobile API</string>
     <string name="makaba_prefs_captcha_category">Captcha</string>
     <string name="makaba_prefs_domain_category">Domain</string>
-    <string name="makaba_prefs_domain">Domain</string>
-    <string name="makaba_prefs_domain_summary">Reserved domains: 2ch.hk, 2ch.pm, 2ch.re, 2ch.tf, 2ch.wf, 2ch.yt, 2-ch.so</string>
     <string name="makaba_prefs_skip_captcha">Skip captcha</string>
     
     <string name="mikuba_password_ignored">(ignored)</string>
     
-    <string name="dobrochan_prefs_domain">Domain</string>
-    <string name="dobrochan_prefs_domain_summary">Reserved domains: dobrochan.com, dobrochan.org, dobrochan.ru</string>
     <string name="dobrochan_prefs_max_rating">Highest rating</string>
     <string name="dobrochan_prefs_show_captcha">Always show captcha</string>
     <string name="dobrochan_prefs_show_captcha_summary">Show the captcha even when it is not required to enter</string>
     
-    <string name="dvach_prefs_domain">Domain</string>
-    <string name="dvach_prefs_domain_summary">Reserved domains: 2-chru.net, mirror.2-chru.net, bypass.2-chru.net</string>
-    
-    <string name="ponyach_prefs_domain">Domain</string>
     <string name="ponyach_prefs_passcode">Passcode</string>
     <string name="ponyach_prefs_captcha">Captcha type</string>
-    
-    <string name="synch_prefs_domain">Domain</string>
-    <string name="synch_prefs_domain_summary">Reserved domains: syn-ch.com, syn-ch.org, syn-ch.ru, syn-ch.com.ua</string>
     
     <string name="infinity_tor_message">To post on 8chan over Tor, you must use the .onion domain.</string>
     
@@ -453,6 +442,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <string name="pref_use_https_summary">Secure encrypted connection</string>
     <string name="pref_cf_recaptcha_fallback">Cloudflare Recaptcha fallback</string>
     <string name="pref_cf_recaptcha_fallback_summary">Use Cloudflare Recaptcha 2 in compatibility mode</string>
+    <string name="pref_domain">Domain</string>
+    <string name="pref_domain_summary">Reserved domains: %s</string>
     <string name="pref_only_new_posts">Only new posts</string>
     <string name="pref_only_new_posts_summary">Load only new posts without reloading the whole thread</string>
     <string name="pref_captcha_type">Captcha type</string>
