--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -466,6 +466,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <string name="pref_show_all_chans_list_summary">Die Liste aller unterstützten Imageboards auf dem neuen Tab anzeigen</string>
     <string name="pref_show_nsfw_boards_title">Alle Boards</string>
     <string name="pref_show_nsfw_boards_summary">Unmoderated Boards anzeigen</string>
+    <string name="pref_mask_pictures_title">SFW-Modus</string>
+    <string name="pref_mask_pictures_summary">Alle Bilder maskieren</string>
     <string name="pref_autohide_title">Autohide</string>
     <string name="pref_autohide_summary">Automatisches Verstecken durch reguläre Ausdrücke</string>
     <!-- <string name="pref_hide_completely_title">Komplett verstecken</string>
