--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -473,6 +473,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <string name="pref_show_all_chans_list_summary">Показывать список всех поддерживаемых имиджборд на новой вкладке</string>
     <string name="pref_show_nsfw_boards_title">Все форумы</string>
     <string name="pref_show_nsfw_boards_summary">Отображать доски с немодерируемым содержимым</string>
+    <string name="pref_mask_pictures_title">SFW режим</string>
+    <string name="pref_mask_pictures_summary">Маскировать все картинки</string>
     <string name="pref_autohide_title">Автоскрытие</string>
     <string name="pref_autohide_summary">Автоскрытие по регулярным выражениям</string>
     <!-- <string name="pref_hide_completely_title">Скрывать полностью</string>
