--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -465,6 +465,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <string name="pref_show_all_chans_list_summary">Show the list of all supported imageboards on the new tab page</string>
     <string name="pref_show_nsfw_boards_title">All boards</string>
     <string name="pref_show_nsfw_boards_summary">Show unmoderated boards</string>
+    <string name="pref_mask_pictures_title">SFW mode</string>
+    <string name="pref_mask_pictures_summary">Mask all pictures</string>
     <string name="pref_autohide_title">Autohide</string>
     <string name="pref_autohide_summary">Automatic hiding by regular expressions</string>
     <!-- <string name="pref_hide_completely_title">Hide completely</string>
