--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -137,6 +137,9 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <string name="menu_open_drawer">Open drawer</string>
     <string name="menu_close_drawer">Close drawer</string>
     <string name="menu_preferences">Preferences</string>
+    <string name="menu_sub_preferences_autoupdate">Auto-Update</string>
+    <string name="menu_sub_preferences_maskpictures">SFW mode</string>
+    <string name="menu_sub_preferences_all">All preferences</string>
     <string name="menu_add_post">Post a Reply</string>
     <string name="menu_add_thread">New thread</string>
     <string name="menu_update">Update</string>
@@ -475,6 +478,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <string name="pref_external_links_confirmation_summary">Ask before going external links</string>
     <string name="pref_do_not_close_tabs_title">Do not close tabs</string>
     <string name="pref_do_not_close_tabs_summary">Do not close tabs by pressing the Back button</string>
+    <string name="pref_preferences_submenu_title">Preferences menu</string>
+    <string name="pref_preferences_submenu_summary">Show some preferences in the application menu</string>
     <string name="pref_pin_markup_title">Pin markup buttons</string>
     <string name="pref_pin_markup_summary">Pin markup buttons in a posting form</string>
     <string name="pref_show_date_title">Display the time</string>
